--- a/PrjMobileTCC/app/src/main/res/layout/fragment_carrinho.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_carrinho.xml
@@ -20,11 +20,13 @@
         android:text="Continuar para checkout"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/white"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="visible" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,7 +65,41 @@
                 android:id="@+id/txtvNumitemscar"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
-                android:text="X items" />
+                android:text="X items"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:id="@+id/lytAvisocarinho"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/txtvAviso"
+                    android:layout_width="match_parent"
+                    android:layout_height="333dp"
+                    android:gravity="center"
+                    android:text="Você ainda não adicionou\n nenhum produto ao carrinho."
+                    android:textColor="@color/black"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/btnVerprodutos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="56dp"
+                    android:backgroundTint="@color/cinzatema"
+                    android:text="Ver Produtos"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/lytCntnrcarrinho"
