--- a/PrjMobileTCC/app/src/main/res/layout/fragment_casa.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_casa.xml
@@ -33,7 +33,8 @@
                     android:id="@+id/imgvCasa1"
                     android:layout_width="match_parent"
                     android:layout_height="256dp"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/bannermobile" />
 
             </android.support.v7.widget.CardView>
 
@@ -50,7 +51,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="46dp"
                 android:text="Populares"
-                android:textSize="16sp" />
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/layoutContcasa"
