--- a/PrjMobileTCC/app/src/main/res/layout/fragment_checkpagamento.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_checkpagamento.xml
@@ -86,7 +86,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="bottom|left"
-                android:text="Endereço de entrega" />
+                android:text="Métodos de Pagamento"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <FrameLayout
                 android:layout_width="match_parent"
