--- a/PrjMobileTCC/app/src/main/res/layout/fragment_checkrevisao.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_checkrevisao.xml
@@ -86,7 +86,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:gravity="bottom|left"
-                android:text="Confirme os dados" />
+                android:text="Confirme os dados"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -97,7 +100,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="bottom|left"
-                    android:text="Seus dados" />
+                    android:text="Seus dados"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -237,7 +243,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:gravity="bottom|left"
-                    android:text="Metodo de pagamento" />
+                    android:text="Metodo de pagamento"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
