--- a/PrjMobileTCC/app/src/main/res/layout/fragment_enderecocadastro.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_enderecocadastro.xml
@@ -32,13 +32,19 @@
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:gravity="center"
-            android:text="Adicionar novo endereço" />
+            android:text="Adicionar novo endereço"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:gravity="bottom|left"
-            android:text="Preencha os dados abaixo para adicionar um novo endereço" />
+            android:text="Preencha os dados abaixo"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <ScrollView
@@ -67,7 +73,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:text="CEP"
-                    android:textSize="16sp" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/txtbCep"
@@ -77,7 +85,7 @@
                     android:ems="10"
                     android:hint="Ex: 12345-123"
                     android:inputType="numberSigned"
-                    android:maxLength="8"
+                    android:maxLength="9"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
             </LinearLayout>
@@ -93,7 +101,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:text="Estado"
-                    android:textSize="16sp" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/txtbEstado"
@@ -103,6 +113,7 @@
                     android:ems="10"
                     android:hint="Ex: SP"
                     android:inputType="textPersonName"
+                    android:maxLength="2"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
             </LinearLayout>
@@ -118,7 +129,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:text="Cidade"
-                    android:textSize="16sp" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/txtbCidade"
@@ -128,6 +141,7 @@
                     android:ems="10"
                     android:hint="Ex: São Paulo"
                     android:inputType="textPersonName"
+                    android:maxLength="50"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
             </LinearLayout>
@@ -143,7 +157,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:text="Bairro"
-                    android:textSize="16sp" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/txtbBairro"
@@ -153,6 +169,7 @@
                     android:ems="10"
                     android:hint="Ex: Bom Retiro"
                     android:inputType="textPersonName"
+                    android:maxLength="50"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
             </LinearLayout>
@@ -168,7 +185,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:text="Rua"
-                    android:textSize="16sp" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/txtbRua"
@@ -178,6 +197,7 @@
                     android:ems="10"
                     android:hint="Ex: Av. Tiradentes"
                     android:inputType="textPersonName"
+                    android:maxLength="50"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
             </LinearLayout>
@@ -193,7 +213,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:text="Numero"
-                    android:textSize="16sp" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/txtbNumero"
@@ -203,7 +225,7 @@
                     android:ems="10"
                     android:hint="Ex: 1234"
                     android:inputType="numberSigned"
-                    android:maxLength="10"
+                    android:maxLength="9"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
             </LinearLayout>
@@ -219,7 +241,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:text="Complemento (Caso necessario)"
-                    android:textSize="16sp" />
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/txtbComplemento"
@@ -229,6 +253,7 @@
                     android:ems="10"
                     android:hint="Ex: Apto 45, Bloco B"
                     android:inputType="textPersonName"
+                    android:maxLength="150"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp" />
             </LinearLayout>
