--- a/PrjMobileTCC/app/src/main/res/layout/fragment_produtos.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_produtos.xml
@@ -28,6 +28,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:text="Filtros"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -196,7 +197,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
                         <LinearLayout
                             android:id="@+id/lytFlttamanho"
@@ -332,7 +333,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
                         <LinearLayout
                             android:id="@+id/lytFltcores"
@@ -443,7 +444,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
-                        android:visibility="visible">
+                        android:visibility="gone">
 
                         <LinearLayout
                             android:id="@+id/lytFlttecidos"
@@ -527,6 +528,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:text="Produtos"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
