--- a/PrjMobileTCC/app/src/main/res/layout/fragment_termosecondicoesdeuso.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_termosecondicoesdeuso.xml
@@ -6,9 +6,22 @@
     tools:context=".TermosecondicoesdeusoFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="20dp"
+                android:text="@string/termos_condicoes"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
