--- a/PrjMobileTCC/app/src/main/res/layout/fragment_usuarioendereco.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_usuarioendereco.xml
@@ -24,7 +24,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="80dp"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingLeft="10dp"
@@ -34,20 +34,18 @@
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:gravity="center"
-            android:text="Meus Endereços" />
+            android:text="Meus Endereços"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:gravity="bottom|left"
-            android:text="Seus endereços" />
     </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
-        android:layout_marginTop="125dp">
+        android:layout_marginTop="80dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,7 +61,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:gravity="bottom|left"
-                android:text="Endereço de Entrega Padrão" />
+                android:text="Endereço de Entrega Padrão"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/lytSemendereopadrao"
@@ -91,11 +91,28 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/txtvAviso"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Nenhum endereço\n definido como padrão."
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/borda10"
                     android:gravity="center"
                     android:orientation="vertical"
                     android:padding="20dp"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -197,7 +214,9 @@
                 android:layout_height="50dp"
                 android:layout_marginBottom="5dp"
                 android:gravity="bottom|left"
-                android:text="Todos endereços cadastrados" />
+                android:text="Todos endereços cadastrados"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
