mobile 100% sem search

--- a/PrjMobileTCC/app/src/main/res/layout/fragment_detalhes.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_detalhes.xml
@@ -264,6 +264,7 @@
                             android:layout_height="match_parent"
                             android:fontFamily="sans-serif"
                             android:gravity="right|center_vertical"
+                            android:paddingRight="20dp"
                             android:text="R$XX,XX"
                             android:textColor="@color/verdedinheiro"
                             android:textSize="20sp"
@@ -299,6 +300,7 @@
                             android:layout_height="match_parent"
                             android:fontFamily="sans-serif"
                             android:gravity="right|center_vertical"
+                            android:paddingRight="20dp"
                             android:text="R$XX,XX"
                             android:textColor="@color/vermelhodinheiro"
                             android:textSize="20sp"
