--- a/PrjMobileTCC/app/src/main/res/layout/fragment_pedidodetalhes.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_pedidodetalhes.xml
@@ -266,6 +266,7 @@
                 android:layout_height="46dp"
                 android:text="Produto do Pedido"
                 android:textColor="@color/black"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <LinearLayout
