--- a/PrjMobileTCC/app/src/main/res/layout/fragment_carrinho.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_carrinho.xml
@@ -20,6 +20,7 @@
         android:text="Continuar para checkout"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:visibility="visible" />
 
