--- a/PrjMobileTCC/app/src/main/res/layout/fragment_conta.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_conta.xml
@@ -23,7 +23,8 @@
             android:gravity="bottom|left|center_vertical"
             android:text="Bem vindo de volta, usuario "
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtvDadoslogin"
@@ -33,7 +34,8 @@
             android:gravity="left|center_vertical"
             android:text=" exemplo@gmail.com "
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <ScrollView
