--- a/PrjMobileTCC/app/src/main/res/layout/fragment_enderecocadastro.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_enderecocadastro.xml
@@ -19,6 +19,7 @@
         android:text="Adicionar endereço"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -72,7 +73,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="CEP"
+                    android:text="CEP*"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -87,7 +88,8 @@
                     android:inputType="numberSigned"
                     android:maxLength="9"
                     android:paddingLeft="20dp"
-                    android:paddingRight="20dp" />
+                    android:paddingRight="20dp"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -100,7 +102,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="Estado"
+                    android:text="Estado*"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -112,10 +114,12 @@
                     android:background="@drawable/bordaplaintxt"
                     android:ems="10"
                     android:hint="Ex: SP"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapCharacters"
                     android:maxLength="2"
                     android:paddingLeft="20dp"
-                    android:paddingRight="20dp" />
+                    android:paddingRight="20dp"
+                    android:textAllCaps="false"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -128,7 +132,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="Cidade"
+                    android:text="Cidade*"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -140,10 +144,11 @@
                     android:background="@drawable/bordaplaintxt"
                     android:ems="10"
                     android:hint="Ex: São Paulo"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapWords"
                     android:maxLength="50"
                     android:paddingLeft="20dp"
-                    android:paddingRight="20dp" />
+                    android:paddingRight="20dp"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -156,7 +161,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="Bairro"
+                    android:text="Bairro*"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -168,10 +173,11 @@
                     android:background="@drawable/bordaplaintxt"
                     android:ems="10"
                     android:hint="Ex: Bom Retiro"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapWords"
                     android:maxLength="50"
                     android:paddingLeft="20dp"
-                    android:paddingRight="20dp" />
+                    android:paddingRight="20dp"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -184,7 +190,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="Rua"
+                    android:text="Rua*"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -196,10 +202,11 @@
                     android:background="@drawable/bordaplaintxt"
                     android:ems="10"
                     android:hint="Ex: Av. Tiradentes"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapWords"
                     android:maxLength="50"
                     android:paddingLeft="20dp"
-                    android:paddingRight="20dp" />
+                    android:paddingRight="20dp"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -212,7 +219,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="Numero"
+                    android:text="Numero*"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -227,7 +234,8 @@
                     android:inputType="numberSigned"
                     android:maxLength="9"
                     android:paddingLeft="20dp"
-                    android:paddingRight="20dp" />
+                    android:paddingRight="20dp"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -252,10 +260,11 @@
                     android:background="@drawable/bordaplaintxt"
                     android:ems="10"
                     android:hint="Ex: Apto 45, Bloco B"
-                    android:inputType="textPersonName"
+                    android:inputType="textCapWords"
                     android:maxLength="150"
                     android:paddingLeft="20dp"
-                    android:paddingRight="20dp" />
+                    android:paddingRight="20dp"
+                    android:textSize="16sp" />
             </LinearLayout>
 
         </LinearLayout>
