--- a/PrjMobileTCC/app/src/main/res/layout/fragment_usuarioendereco.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/fragment_usuarioendereco.xml
@@ -63,6 +63,7 @@
                 android:gravity="bottom|left"
                 android:text="Endereço de Entrega Padrão"
                 android:textColor="@color/black"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -73,13 +74,17 @@
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="20dp"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
+                    android:id="@+id/txtvAviso"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="Nenhum endereço padrao definido" />
+                    android:text="Nenhum endereço\n definido como padrão."
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -87,23 +92,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_horizontal"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/txtvAviso"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="Nenhum endereço\n definido como padrão."
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -216,6 +204,7 @@
                 android:gravity="bottom|left"
                 android:text="Todos endereços cadastrados"
                 android:textColor="@color/black"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -241,7 +230,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Mais (X) endereços cadastrados" />
+                        android:text="Mais (X) endereços cadastrados"
+                        android:textSize="16sp" />
 
                     <ImageView
                         android:id="@+id/icEndDOWN"
