--- a/PrjMobileTCC/app/src/main/res/layout/activity_main.xml
+++ b/PrjMobileTCC/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,63 @@
             android:background="@color/fundo" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:orientation="vertical">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/lytCntnrpesquisa"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:orientation="horizontal"
+                        android:paddingLeft="20dp"
+                        android:paddingTop="5dp"
+                        android:paddingRight="20dp"
+                        android:paddingBottom="5dp"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:id="@+id/imageView2"
+                            android:layout_width="40dp"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitCenter"
+                            tools:srcCompat="@drawable/logo" />
+
+                        <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:ellipsize="end"
+                            android:gravity="left|center_vertical"
+                            android:maxLines="1"
+                            android:paddingLeft="20dp"
+                            android:text="Nenhum resultad" />
+
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,13 +97,20 @@
                 android:layout_height="56dp"
                 android:layout_gravity="left|center_vertical"
                 android:src="@drawable/logo" />
-<!--
+
             <SearchView
+                android:id="@+id/schvBuscaproduto"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center|right"
-                android:queryHint="Procurar produtos..."
-                tools:visibility="gone" />-->
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:queryHint="Buscar..." />
+            <!--
+                        <SearchView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center|right"
+                            android:queryHint="Procurar produtos..."
+                            tools:visibility="gone" />-->
         </FrameLayout>
     </android.support.design.widget.AppBarLayout>
 
